--- a/portofolio.html
+++ b/portofolio.html
@@ -22,12 +22,28 @@
         <img src="c:\Users\Oming\OneDrive - ITPLN\Pictures\Saved Pictures\img.png.jpg" alt="Foto Diri Saya" width="300">
     </section>
 
+    <video
+    width="400" height="400"
+    autoplay
+    controls
+    loop
+    >
+
+    </video>
+
     <section>
         <h2 align="center">Tentang Saya</h2>
         <p align="center">Halo, nama saya Dewa Nyoman Prastisthaya Mahadana. Saya adalah mahasiswa S1 Teknik Informatika dari Institut Teknologi PLN</p>
         <p align="center">Saya asli dari Bali, Lahir pada 4 Januari 2005, Kelulusan 2023 dari SMAK Santo Yoseph Denpasar</p>
         <p align="center">Saya juga memiliki hobby berolahraga seperti Badminton, Basket, Golf. Cita-cita saya menjadi pengusaha suskses</p>
     </section>
+
+    <style>
+        video {
+            display: block;
+            margin: auto;
+        }
+    </style>
 
     <footer>
         <p align="center">Hubungi saya di: <a href="dewaditya2005@gmail.com">dewaditya2005@gmail.com</a></p>
